--- a/浏览器渲染.md
+++ b/浏览器渲染.md
@@ -1,1 +1,21 @@
 # 浏览器渲染
+
+## 浏览器
+### 发展历史
+https://en.wikipedia.org/wiki/History_of_the_web_browser
+
+### 比例
+http://tongji.baidu.com/data/browser
+
+### 内核
+https://en.wikipedia.org/wiki/Comparison_of_web_browsers
+
+### 构成
+![](https://www.html5rocks.com/zh/tutorials/internals/howbrowserswork/layers.png)
+
+## Render Engine
+### webkit
+![](https://www.html5rocks.com/zh/tutorials/internals/howbrowserswork/webkitflow.png)
+
+### Gecko
+![](https://www.html5rocks.com/zh/tutorials/internals/howbrowserswork/image008.jpg)
