--- a/浏览器渲染.md
+++ b/浏览器渲染.md
@@ -19,3 +19,16 @@ https://en.wikipedia.org/wiki/Comparison_of_web_browsers
 
 ### Gecko
 ![](https://www.html5rocks.com/zh/tutorials/internals/howbrowserswork/image008.jpg)
+
+## 加载顺序
+测试
+## Reflow & Repaint 
+1. `display: none`
+2. `visibility: hidden`
+3. `node.style.left = '30px'`
+4. `color: red`
+5. `transform: translateX(30px)`
+
+### 参考
+- [1](http://www.phpied.com/rendering-repaint-reflowrelayout-restyle/)
+- [2](https://segmentfault.com/a/1190000002629708)
