--- a/浏览器渲染.md
+++ b/浏览器渲染.md
@@ -21,6 +21,12 @@ https://en.wikipedia.org/wiki/Comparison_of_web_browsers
 ![](https://www.html5rocks.com/zh/tutorials/internals/howbrowserswork/image008.jpg)
 
 ## 加载顺序
+
+ 1. js放下方，css放上面
+
+
+
+
 测试
 ## Reflow & Repaint 
 1. `display: none`
