--- a/手把手教你写框架.md
+++ b/手把手教你写框架.md
@@ -2,12 +2,16 @@
 
 by 若愚@饥人谷
 
+## 背景
+
+源码：[ https://github.com/jirengu/node-server](https://github.com/jirengu/node-server)
+
 ### 讲什么
 
-- step0. 我们先使用 Nodejs 的入门知识搭建一个服务器
-- step1. 对搭建的服务器功能进行扩展，使之成为一个能用的静态服务器
-- step2. 继续扩展，让我们的静态服务器能解析路由，把服务器变成一个支持静态目录和动态路由的“网站”
-- step3. 模拟 Node.js 的后端框架 Express的使用方法，实现一个包含静态目录设置、中间件处理、路由匹配的迷你 Express 框架
+- step0. 知识搭建一个服务器
+- step1. 实现静态服务器
+- step2. 让静态服务器能解析路由
+- step3. 实现 Express 框架雏形
 - step4. 完善这个框架
 
 
@@ -15,13 +19,71 @@ by 若愚@饥人谷
 - 有一些 js 使用经验，有部分 nodejs的使用经验
 - 了解 Express 的用法
 
+
 ## step0 服务器搭建初体验
+```
+var http = require('http')
+
+var server = http.createServer(function(request, response){
+  //response.setHeader("Content-Type","text/plain; charset=utf-8")
+  response.setHeader('Content-Type','text/html')
+  //response.writeHead(202, 'haha')
+  response.write('<html><head><meta charset="utf-8" /></head>')
+  response.write('<body>')
+  response.write('<h1>你好</h1>')
+  response.write('</body>')
+  response.end()
+})
+console.log('open http://localhost:8080')
+server.listen(8080)
+```
+
+### 相关概念
+- setHeader 的作用
+- Content-Type 的作用
+- 状态码
+- 乱码的解决
+- 服务器的本质
+- Http协议的本质
+
+### 参考文档
+- [Node文档 http 模块](https://nodejs.org/dist/latest-v6.x/docs/api/http.html)
+- [Http 介绍](http://book.jirengu.com/fe/%E4%B8%93%E9%A2%98%E6%89%A9%E5%B1%95/HTTP%E4%B8%93%E9%A2%98/message.html) 
 
 
 ## step1 搭建静态服务器
+```
+...
+
+function staticRoot(staticPath, req, res){
+  var pathObj = url.parse(req.url, true)
+  var filePath = path.join(staticPath, pathObj.pathname)
+  var fileContent = fs.readFileSync(filePath,'binary')
+  res.write(fileContent, 'binary')
+  res.end()
+}
+var server = http.createServer(function(req, res){
+  staticRoot(path.resolve(__dirname, 'static'), req, res)
+})
+server.listen(8080)
+
+```
+### 注意事项
+1. url、 path、fs 模块的 简单使用
+2. 浏览器请求一个文件的原理
+3. 默认文件解析
+4. 错误处理
+5. MIME Type
+
 
 ## step2 路由解析
 
 ## step3 框架雏形
 
 ## step4 框架完善
+
+## 广告
+直播14班开班大吉
+
+## 参考文章
+- [JerryQu——POST提交方式](https://imququ.com/post/four-ways-to-post-data-in-http.html)
