--- a/手把手教你写框架.md
+++ b/手把手教你写框架.md
@@ -77,13 +77,75 @@ server.listen(8080)
 
 
 ## step2 路由解析
+```
+var routes = {
+  '/a': function(req, res){},
+  '/a/b/c': function(req, res){}
+}
+function routePath(req, res){
+  var pathObj = url.parse(req.url, true)
+  var handleFn = routes[pathObj.pathname]
+  if(handleFn){
+   handleFn(req, res) 
+  }else {
+    staticRoot(path.join(__dirname, 'static'), req, res)
+  }
+}
+http.createServer(routePath).listen(8080)
+```
+### 注意事项
+1. 请求参数的解析，get、post
+2. post 类型 body 的解析
 
 ## step3 框架雏形
+```
+function express() {
+  var tasks = []
+  var app = function(req, res){
+    var i = 0
+    function next() {
+      var task = tasks[i++]
+      if(!task) {
+        return
+      }
+      if(task.routePath === null || url.parse(req.url, true).pathname === task.routePath){
+        task.middleWare(req, res, next)
+      }else{
+        next()
+      }
+    }
+    next()
+  }
 
-## step4 框架完善
+  app.use = function(routePath, middleWare){
+    if(typeof routePath === 'function') {
+      middleWare = routePath
+      routePath = null
+    }
+    tasks.push({
+      routePath: routePath,
+      middleWare: middleWare
+    })
+  }
+  return app
+}
+
+```
+### 注意事项
+1. 上述代码的思路是？
+2. 中间件的思路？
+
+## step4 step5 框架完善
+1. 支持静态目录
+2. req.query, req.body, res.send
+3. mime-type
+4. 模板的加入
+
 
 ## 广告
-直播14班开班大吉
+直播14班开班大吉[查看课程大纲](http://blog.jirengu.com/?p=574)
 
 ## 参考文章
 - [JerryQu——POST提交方式](https://imququ.com/post/four-ways-to-post-data-in-http.html)
+- [zlib 压缩](https://nodejs.org/api/zlib.html)
+
