--- a/服务器搭建.md
+++ b/服务器搭建.md
@@ -1,8 +1,10 @@
 # 服务器搭建
 
 ## 搭建静态服务器
+[代码](https://github.com/jirengu/node-server/blob/master/step1/server.js)
 
-## 处理路由
+## 带路由解析的服务器
+[代码](https://github.com/jirengu/node-server/blob/master/step2/server.js)
 
 ## mock 数据
 
