--- a/解密类型转换.md
+++ b/解密类型转换.md
@@ -109,12 +109,17 @@ obj == true  //题目14
 |type|	Result|
 |Undefined|	NaN|
 |Null|	0|
-|Boolean|	T
-The result is +0 if the argument is false.
-Number	The result equals the input argument (no conversion).
-String	In effect evaluates Number(string)
-“abc” -> NaN
-“123” -> 123
-Object	Apply the following steps:
-1. Let primValue be ToPrimitive(input argument, hint Number).
-2. Return ToNumber(primValue).
+|Boolean|	ture -> 0, false -> 1
+|String| “abc” -> NaN, “123” -> 123
+
+### toPrimitive
+
+对于 Object 类型，先尝试调用 .valueOf 方法获取结果。
+如果没定义，再尝试调用 .toString方法获取结果
+
+
+
+
+
+
+
