--- a/解密类型转换.md
+++ b/解密类型转换.md
@@ -64,36 +64,37 @@ if('0.00'){
 
 ###
 ```
-"" == 0
-" " == 0
-"" == true
-"" == false
-" " == true
+"" == 0  //题目1
+" " == 0  //题目2
+"" == true  //题目3
+"" == false  //题目4
+" " == true  //题目5
 ```
 
 ###
 ```
-!" " == true  //题目1
-!" " == false  //题目2
-"hello" == true  //题目3
-"hello" == false //题目4
-"0" == true  //题目5
-"0" == false  //题目6
-"00" == false  //题目7
-"0.00" == false  //题目8
+!" " == true  //题目6
+!" " == false  //题目7
+"hello" == true  //题目8
+"hello" == false //题目9
+"0" == true  //题目10
+"0" == false  //题目11
+"00" == false  //题目12
+"0.00" == false  //题目13
 ```
 
 ###
 ```
-undefined == null  //题目9
-[0] == 0  //题目10
-var obj = {  //题目11
+undefined == null  //题目14
+{} == true  //题目15
+[] == true  //题目16
+var obj = { 
   a: 0, 
   valueOf: function(){return 1} 
 } 
-obj == "[object Object]"  //题目12
-obj == 1  //题目13
-obj == true  //题目14
+obj == "[object Object]"  //题目17
+obj == 1  //题目18
+obj == true  //题目19
 ```
 ## 解密
 |x|y|结果|
@@ -117,7 +118,11 @@ obj == true  //题目14
 对于 Object 类型，先尝试调用 .valueOf 方法获取结果。
 如果没定义，再尝试调用 .toString方法获取结果
 
+###
+上述答案？
 
+## 参考
+http://www.jianshu.com/p/6d26308c897e
 
 
 
